--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Galatta</title>
-    
+    <!--
 	  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">  
+	-->  
      <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	
-	   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 	
+<!--	   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 	
 	 <script src='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script> 	
+    -->
     <script src="js/jquery.min.js"></script>
 	<script src='js/bootstrap.min.js'></script>
 	<script src='js/slide-menu.js'></script>
